--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="restaurant_image">Restaurant Image</string>
+    <string name="delivery">Delivery</string>
+    <string name="dine_out">Dine-out</string>
+    <string name="take_away">Take Away</string>
 </resources>
