--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,7 @@
 <resources>
     <string name="app_name">Zomato Buddy</string>
-    <string name="title_activity_dashboard">DashboardActivity</string>
     <string name="OK">OK</string>
 
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
     <string name="restaurant_image">Restaurant Image</string>
     <string name="delivery">Delivery</string>
     <string name="dine_out">Dine-out</string>
@@ -17,4 +11,5 @@
     <string name="closed">Closed</string>
     <string name="search">Search</string>
     <string name="could_not_find_any_search_result_for_the_given_query">Could not find any search result for the given query.</string>
+    <string name="performs_the_search_operation">Performs the search operation</string>
 </resources>
