--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="search">Search</string>
     <string name="could_not_find_any_search_result_for_the_given_query">Could not find any search result for the given query.</string>
     <string name="performs_the_search_operation">Performs the search operation</string>
+    <string name="reviews">Reviews</string>
 </resources>
