Implemented favourite functionality
Ability to allow the user to mark restaurants as favourites and also unmark them. This is displayed in a separate tab of the application.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
         Continue if you agree or else please exit.</string>
     <string name="favourites">Favourites</string>
     <string name="rest_fav_marked">Restaurant marked as favourite.</string>
-    <string name="rest_fav_cannot_marked">Restaurant could not be marked as favourite.</string>
+    <string name="rest_fav_cannot_marked">The requested action could not be performed.</string>
+    <string name="rest_fav_unmarked">Restaurant removed as favourite</string>
 </resources>
