--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Z Buddy</string>
+    <string name="app_name">Hungry</string>
     <string name="OK">OK</string>
 
     <string name="restaurant_image">Restaurant Image</string>
