--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,13 @@
     <string name="rest_fav_cannot_marked">The requested action could not be performed.</string>
     <string name="rest_fav_unmarked">Restaurant removed as favourite</string>
     <string name="using_zomato_developer_api">Zomato Developer API</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="send_otp">Send OTP</string>
+    <string name="or">OR</string>
+    <string name="continue_with_email">Continue with Email</string>
 </resources>
