List based WS API Integration
Dashboard WIP
Added most of the list based rest api calls.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="dining">Dining</string>
     <string name="nightlife">Nightlife</string>
     <string name="profile">Profile</string>
+    <string name="curated_collections">Curated collections</string>
+    <string name="see_all">see all</string>
 </resources>
