--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="profile">Profile</string>
     <string name="curated_collections">Curated collections</string>
     <string name="see_all">see all</string>
+    <string name="recommended_for_you">Recommended for you</string>
 </resources>
