--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="curated_collections">Curated collections</string>
     <string name="see_all">see all</string>
     <string name="recommended_for_you">Recommended for you</string>
+    <string name="places_you_might_want_to_try">Places you might want to try</string>
 </resources>
