--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,8 @@
     <string name="menu_foodmenu">Menu</string>
     <string name="menu_photos">Photos</string>
     <string name="menu_reviews">Reviews</string>
+    <string name="address">ADDRESS</string>
+    <string name="images_from_zomato">Images from Zomato</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
 </resources>
