--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="images_from_zomato">Images from Zomato</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="other_info">Other Info</string>
 </resources>
