--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,12 @@
     <string name="try_something_new">Try something new</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_order">Order</string>
+    <string name="bookmarks">Bookmarks</string>
+    <string name="notification">Notification</string>
+    <string name="settings">Settings</string>
+    <string name="payments">Payments</string>
+    <string name="send_feedback">Send Feedback</string>
+    <string name="rate_us_on_the_play_store">Rate us on the Play Store</string>
+    <string name="log_out">Log out</string>
+    <string name="about">About</string>
 </resources>
